# Automated-Warehouse

./: .gitignore  BFS.c  BFS.h  CMakeLists.txt  README.md  arrayManagement.c  arrayManagement.h  funcs.c  funcs.h  info  input_management.c  input_management.h  main.c  tempCodeRunnerFile.c  types.h
src/: dynamic_warehouse_designer.c  dynamic_warehouse_designer.h  main.c
src/algorithms/: bfs.c  bfs.h  dfs.c  dfs.h  worst_case.c  worst_case.h
src/dynamic_layout/: dynamic_warehouse.c  dynamic_warehouse.h
src/layout designer/: dynamic_warehouse_designer.c  dynamic_warehouse_designer.h
src/layout-designer/: dynamic_warehouse_designer.c  dynamic_warehouse_designer.h
src/layoutDesigner/: dynamic_warehouse.c  dynamic_warehouse.h
src/managers/: algorithm_manager.c  algorithm_manager.h  array_manager.c  array_manager.h  input_manager.c  input_manager.h  main_menu.c  main_menu.h
src/utility/: misc.c  misc.h  types.h
